k8s/device-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-service
  template:
    metadata:
      labels:
        app: device-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: device-service
        image: selod/iot-device-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: device-app-service
spec:
  selector:
    app: device-service
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
