k8s/device-db.yaml
# 1. Adatbázis Konténer (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-db
  template:
    metadata:
      labels:
        app: device-db
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0
        ports:
        - containerPort: 27017
---
# 2. Adatbázis Belső Hálózat (Service)
apiVersion: v1
kind: Service
metadata:
  name: device-db-service
spec:
  selector:
    app: device-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
