k8s/rule-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rule-db
  template:
    metadata:
      labels:
        app: rule-db
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: rule-db-service
spec:
  selector:
    app: rule-db
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
