k8s/telemetry-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-service
  template:
    metadata:
      labels:
        app: telemetry-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3001"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: telemetry-service
        image: selod/iot-telemetry-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-app-service
  labels:
    app: telemetry-service
spec:
  selector:
    app: telemetry-service
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
