k8s/telemetry-db.yaml
# 1. Telemetry Adatbázis Konténer (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-db
  template:
    metadata:
      labels:
        app: telemetry-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
# 2. Telemetry Adatbázis Belső Hálózat (Service)
apiVersion: v1
kind: Service
metadata:
  name: telemetry-db-service
spec:
  selector:
    app: telemetry-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
