k8s/device-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: device-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api/devices
        pathType: Prefix
        backend:
          service:
            name: device-app-service
            port:
              number: 80
