k8s/rule-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rule-service
  template:
    metadata:
      labels:
        app: rule-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3002"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: rule-service
        image: selod/iot-rule-engine:latest
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rule-app-service
  labels:
    app: rule-app
spec:
  selector:
    app: rule-service
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
---
# Külső elérés csak a szabályok beállításához és a riasztások lekéréséhez
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rule-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api/rules
        pathType: Prefix
        backend:
          service:
            name: rule-app-service
            port:
              number: 80
      - path: /api/alerts
        pathType: Prefix
        backend:
          service:
            name: rule-app-service
            port:
              number: 80
